fix: Update PanelHeadertButton iOS styles

--- a/src/components/ModalPageHeader/ModalPageHeader.css
+++ b/src/components/ModalPageHeader/ModalPageHeader.css
@@ -20,7 +20,7 @@
 
 .ModalPage--ios .ModalPageHeader__in {
   height: var(--modalheader_height_ios);
-  padding: 0 4px;
+  padding: 0 16px;
 }
 
 .ModalPageHeader__separator {
@@ -74,11 +74,6 @@
   font-size: 17px;
 }
 
-.ModalPageHeader--ios .ModalPageHeader__left .PanelHeaderButton .Icon--24 {
-  padding-left: 12px;
-  padding-right: 12px;
-}
-
 .ModalPageHeader--ios .ModalPageHeader__content {
   position: relative;
   z-index: 1;
@@ -99,15 +94,6 @@
   flex-basis: 0;
   padding-left: 12px;
   font-size: 17px;
-}
-
-.ModalPageHeader--ios .ModalPageHeader__right .PanelHeaderButton:not(:first-child) {
-  padding-left: 12px;
-}
-
-.ModalPageHeader--ios .ModalPageHeader__right .PanelHeaderButton .Icon--24 {
-  padding-left: 12px;
-  padding-right: 12px;
 }
 
 .ModalPageHeader--ios.ModalPageHeader--sizeX-regular .ModalPageHeader__in {
